<resources>
    <string name="app_name">Facio</string>
    <string name="font_path_poppins">fonts/poppins/Poppins-Regular.ttf</string>
    <string name="font_path_poppins_medium">fonts/poppins/Poppins-Medium.ttf</string>

    <string name="facebook_app_id">1590599331109870</string>
    <string name="fb_login_protocol_scheme">fb1590599331109870</string>

    <!-- GENERAL -->
    <string name="label_history">History</string>
    <string name="sample_lorem_medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</string>
    <string name="sample_lorem_short">Lorem ipsum dolor sit amet, consectetur adipiscing</string>
    <string name="empty_general">Empty Data</string>
    <string name="content_empty_general">Are you sure this page is you looking for?</string>

    <!-- DIALOG -->
    <string name="please_wait">Please wait……</string>

    <!--ALERT DIALOG -->
    <string name="alert_downloading">Downloading</string>
    <string name="alert_downloading_message">An error occurs. Please try again!</string>
    <string name="alert_ok_button">OK</string>
    <string name="alert_cancel_button">Cancel</string>
    <string name="no_internet_title">No internet</string>
    <string name="no_internet_description">Please check your connection!</string>
    <string name="error_fetching_remote_data_title">Error fetching data from server!</string>
    <string name="error_fetching_remote_data_description">An error occurs while fetching data from server. Please try again later!</string>
    <string name="font_path_grotesk">fonts/grotesk/Tele-GroteskNor.ttf</string>
    <string name="label_hint_search_product">Search product…</string>
    <string name="label_empty_data">Data Kosong</string>
    <string name="login_page_placeholder_email">Email</string>
    <string name="login_page_placeholder_password">Password</string>
    <string name="login_page_login">Sign In</string>
    <string name="label_sehat">Sehat</string>
    <string name="label_q">Q</string>
    <string name="label_remember_me">Remember me</string>
    <string name="label_title_signup">Don\'t have an account?</string>
    <string name="label_signup_here">Signup here</string>
    <string name="label_trips_list">Trips List</string>
    <string name="arrive_date">Date Arrive</string>
    <string name="arrive_time">Arrive Time</string>
    <string name="label_eta">Estimated Time Arrive (ETA)</string>
    <string name="label_sign_in_with_google">Sign in with Google</string>
    <string name="label_sign_in_with_facebook">Sign in with Facebook</string>
    <string name="menu_home">Home</string>
    <string name="menu_feed">Feed</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_profile">Profile</string>
    <string name="label_your_purchase_history">Your Purchase History</string>

</resources>
