<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.sehatq.test.ui.login.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        svOverScroll="@{true}"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/padding_slarge">

            <include layout="@layout/content_title" />

            <!--suppress AndroidUnknownAttribute -->
            <EditText
                android:id="@+id/edt_email"
                style="@style/EditTextApps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:afterTextChanged="@{viewModel::afterIdentifierChanged}"
                android:drawableStart="@android:drawable/ic_dialog_email"
                android:drawablePadding="@dimen/margin_smed"
                android:drawableTint="@color/colorPrimary"
                android:hint="@string/login_page_placeholder_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/padding_small"
                tools:ignore="UnusedAttribute" />

            <!--suppress AndroidUnknownAttribute -->
            <EditText
                android:id="@+id/edt_password"
                style="@style/EditTextApps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_hms"
                android:afterTextChanged="@{viewModel::afterPasswordChanged}"
                android:drawableStart="@android:drawable/ic_lock_lock"
                android:drawablePadding="@dimen/margin_smed"
                android:drawableTint="@color/colorPrimary"
                android:hint="@string/login_page_placeholder_password"
                android:inputType="textPassword"
                android:padding="@dimen/padding_small"
                tools:ignore="UnusedAttribute" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_hms"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_remember_me" />

                <Button
                    style="@style/SmallBorderlessButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Forgot Password?" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/ButtonApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_30dp"
                android:layout_marginBottom="@dimen/size_10dp"
                android:background="@drawable/default_button"
                android:onClick="@{() -> viewModel.doLogin()}"
                android:text="@string/login_page_login"
                android:textAllCaps="false" />

            <include layout="@layout/layout_divider" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:background="@drawable/default_button_google"
                android:gravity="center"
                android:text="@string/label_sign_in_with_google"
                android:textAllCaps="false"
                app:backgroundTint="@null"
                app:icon="@drawable/ic_google"
                android:onClick="@{() -> viewModel.googleLogin()}"
                app:iconGravity="textStart"
                app:iconPadding="10dp"
                app:iconTint="@null" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:background="@drawable/default_button_facebook"
                android:gravity="center"
                android:text="@string/label_sign_in_with_facebook"
                android:textAllCaps="false"
                android:onClick="@{() -> viewModel.facebookLogin()}"
                app:backgroundTint="@null"
                app:icon="@drawable/ic_facebook"
                app:iconGravity="textStart"
                app:iconPadding="10dp"
                app:iconTint="@null" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_smed"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewLogan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/label_title_signup"
                    android:textSize="@dimen/text_s" />

                <Button
                    style="@style/SmallBorderlessButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_signup_here" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>